add HTML elements

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 <body>
     <input type="text" id="search-bar" />
     <button id="search-btn">Search</button>
+    <br>
+    
+    <img src="poke-img" alt="Pokemon Image">
+    <div id= "poke-name">Name
+        <ul>
+            <li id= "poke-hp">HP: </li>
+            
+        </ul>
+    </div>
 </body>
 </html>
