query the button and search bar

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <button id="search-btn">Search</button>
     <br>
     
-    <img src="poke-img" alt="Pokemon Image">
+    <!-- <img src="poke-img" alt="Pokemon Image"> -->
     <div id= "poke-name">Name
         <ul>
             <li id= "poke-hp">HP: </li>
             
         </ul>
     </div>
+    <script src="./pokemon.js" type="text/javascript"></script>
 </body>
 </html>
