--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="search-btn">Search</button>
     <br>
     
-    <!-- <img src="poke-img" alt="Pokemon Image"> -->
+    <img src="poke-img" alt="Pokemon Image">
     <div id= "poke-name">Name
         <ul>
             <li id= "poke-hp">HP: </li>
