--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <button id="search-btn">Search</button>
     <br>
     
-    <img src="poke-img" alt="Pokemon Image">
-    <div id= "poke-name">Name
-        <ul>
-            <li id= "poke-hp">HP: </li>
-            
-        </ul>
+    <img id="poke-img" src="" />
+    <div id= "poke-name">Name</div>
+    <div id="poke-hp">
+
     </div>
     <script src="./pokemon.js" type="text/javascript"></script>
 </body>
