added a span afer div

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     
     <img id="poke-img" src="" />
     <div id= "poke-name">Name</div>
-    <div id="poke-hp">
+    <ul>
+        <li> HP: 
+            <span id = "poke-hp">
+
+            </span>
+        </li>
+    </ul>   
 
     </div>
     <script src="./pokemon.js" type="text/javascript"></script>
