add more attributes

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <img id="poke-img" src="" />
     <div id= "poke-name">Name</div>
     <ul>
-        <li> HP: 
-            <span id = "poke-hp">
-
-            </span>
-        </li>
+        <li> hp: <span id = "poke-hp"></span></li>
+        <li> attack: <span id = "poke-attack"></span></li>
+        <li> defense: <span id = "poke-defense"></span></li>
+        <li> special attack: <span id = "poke-s-attack"></span></li>
+        <li> special defense: <span id = "poke-s-defense"></span></li>
+        <li> speed: <span id = "poke-speed"></span></li>
+        <li> special skill: <span id = "poke-s-skill"></span></li>
     </ul>   
 
     </div>
