--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <ul>
         <li> hp: <span id = "poke-hp"></span></li>
         <li> attack: <span id = "poke-attack"></span></li>
-        <li> defense: <span id = "poke-defense"></span></li>
         <li> special attack: <span id = "poke-s-attack"></span></li>
+        <li> defense: <span id = "poke-defense"></span></li>
         <li> special defense: <span id = "poke-s-defense"></span></li>
+        
+        <li> weight: <span id = "poke-weight"></span></li>
         <li> speed: <span id = "poke-speed"></span></li>
-        <li> special skill: <span id = "poke-s-skill"></span></li>
+        <li> ability: <span id = "poke-s-skill1"></span>, <span id = "poke-s-skill2"></span></li>
     </ul>   
 
     </div>
