--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poke-API</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-    <input type="text" id="search-bar" />
-    <button id="search-btn">Search</button>
-    <br>
+    <nav class="navbar navbar-light bg-light">
+        <form class="form-inline">
+            <input type="text" id="search-bar" />
+            <button id="search-btn">Search</button>
+        </form>
+    </nav>
     
     <img id="poke-img" src="" />
     <div id= "poke-name">Name</div>
