style the search bar

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <form class="form-inline">
-            <input type="text" id="search-bar" />
-            <button id="search-btn">Search</button>
+            <input class="form-control mr-sm-2" placeholder="Search for pokemon" type="text" id="search-bar" />
+            <button id="search-btn" class="btn btn-outline-success my-2 my-sm-0">Search</button>
         </form>
     </nav>
     
