--- a/index.html
+++ b/index.html
@@ -8,27 +8,30 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light d-flex justify-content-center">
         <form class="form-inline">
             <input class="form-control mr-sm-2" placeholder="Search for pokemon" type="text" id="search-bar" />
             <button id="search-btn" class="btn btn-outline-success my-2 my-sm-0">Search</button>
         </form>
     </nav>
-    
-    <img id="poke-img" src="" />
-    <div id= "poke-name">Name</div>
-    <ul>
-        <li> type: <span id = "poke-type"></span></li>
-        <li> hp: <span id = "poke-hp"></span></li>
-        <li> attack: <span id = "poke-attack"></span></li>
-        <li> special attack: <span id = "poke-s-attack"></span></li>
-        <li> defense: <span id = "poke-defense"></span></li>
-        <li> special defense: <span id = "poke-s-defense"></span></li>
-        <li> weight: <span id = "poke-weight"></span></li>
-        <li> speed: <span id = "poke-speed"></span></li>
-        <li> ability: <span id = "poke-skill1"></span>, <span id = "poke-skill2"></span></li>
-    </ul>   
+    <div class="d-flex justify-content-center">
 
+        <ul>
+            <img id="poke-img" style="width: 200px;" />
+
+            <h2><span id = "poke-name"></span></h2>
+            <h5> type: <span id = "poke-type"></span></h5>
+            <h5> hp: <span id = "poke-hp"></span></h5>
+            <h5> attack: <span id = "poke-attack"></span></h5>
+            <h5> special attack: <span id = "poke-s-attack"></span></h5>
+            <h5> defense: <span id = "poke-defense"></span></h5>
+            <h5> special defense: <span id = "poke-s-defense"></span></h5>
+            <h5> weight: <span id = "poke-weight"></span></h5>
+            <h5> speed: <span id = "poke-speed"></span></h5>
+            <h5> ability: <span id = "poke-skill1"></span>, <span id = "poke-skill2"></span></h5>
+        </ul>   
+
+        </div>
     </div>
     <script src="./pokemon.js" type="text/javascript"></script>
 </body>
