--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
     <style>
         body{
             font-family: 'VT323', monospace;
-            /*   */
+            background-color: #BBC5BD;
         }
         #background-img{
             position:absolute;
             z-index: -1;
+            right:0px;
         }
+
     </style>
 </head>
 <body>
-    <img src="./asset/BACKGROUND-IMG.png" width="100%" id="background-img" alt="">
+    <img src="./asset/BACKGROUND-IMG.png" height="100%" id="background-img" alt="">
     <nav class="navbar navbar-light bg-light d-flex justify-content-center">
         <form class="form-inline">
             <input class="form-control mr-sm-2" placeholder="Search for pokemon" type="text" id="search-bar" />
